src/test/deca/syntax/valid/provided/instanceOf.deca
// Description:
//    Test de instanceof
//
// Resultats:
//    Rien
//
// Historique:
//    cree le 01/01/2021

{ 
   boolean b = x instanceof Integer;
}
